--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "",
   "license": "ISC",
+  "type":"module",
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
