--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -34,7 +34,9 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "ora": "^8.1.0",
-    "puppeteer": "^23.3.1",
+    "p-limit": "^6.2.0",
+    "playwright": "^1.49.1",
+    "puppeteer": "^23.11.1",
     "puppeteer-core": "^23.3.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
