--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "2": "^3.0.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -43,7 +44,9 @@
     "react-router-dom": "^6.24.1",
     "router": "^1.3.8",
     "socket.io": "^4.7.5",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "yahoo-finance": "^0.3.8",
+    "yahoo-finance2": "^2.13.3"
   },
   "keywords": [],
   "description": ""
