--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.4.4",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "ora": "^8.1.0",
